--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@InBook{	  arandagutierrez2008composicion,
+  address	= {Pamplona},
+  author	= {Aranda Guti{\'e}rrez, Cristina},
+  booktitle	= {Actas del {XXXVII} Simposio Internacional de la Sociedad
+		  Espa{\~n}ola de Ling{\"u}{\'i}stica (SEL)},
+  editor	= {Olza, In{\'e}s and Casado Velarde, Manuel and G{\'o}nzalez
+		  Ruiz, Ram{\'o}n},
+  pages		= {31-39},
+  publisher	= {Servicio de Publicaciones de la Universidad de Navarra},
+  title		= {La composici{\'o}n de los nombres de marca en el sector de
+		  la alimentaci{\'o}n}
+}
+
+@Book{		  larson-hall2016guide,
+  address	= {London ; New York},
+  author	= {Larson-Hall, Jenifer},
+  publisher	= {Routledge},
+  title		= {A Guide to Doing Statistics in Second Language Research
+		  Using {SPSS} and R}
+}
+
 @Book{		  karmiloff-smith1999modularity,
   author	= {Karmiloff-Smith, Annette},
   edition	= {4. print},
