--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -9,7 +9,8 @@
   pages		= {31-39},
   publisher	= {Servicio de Publicaciones de la Universidad de Navarra},
   title		= {La composici{\'o}n de los nombres de marca en el sector de
-		  la alimentaci{\'o}n}
+		  la alimentaci{\'o}n},
+  year		= {2008}
 }
 
 @Book{		  larson-hall2016guide,
