--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Article{	  bale2024counting,
+  author	= {Bale, Alan and Nicolas, David},
+  journal	= {Linguistics and Philosophy},
+  title		= {Counting Individuals and Their Halves}
+}
+
 @InBook{	  arandagutierrez2008composicion,
   address	= {Pamplona},
   author	= {Aranda Guti{\'e}rrez, Cristina},
