--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Article{	  toquero-perez2022revisiting,
+  author	= {Toquero-P{\'e}rez, Luis Miguel},
+  journal	= {Linguistic Variation},
+  number	= {1},
+  pages		= {123--207},
+  title		= {Revisiting Extraction and Subextraction Patterns from
+		  Arguments},
+  volume	= {22}
+}
+
+@Article{	  vanrooij2024reclaiming,
+  author	= {van Rooij, Iris and Guest, Olivia and Adolfi, Federico and
+		  de Haan, Ronald and Kolokolova, Antonina and Rich,
+		  Patricia},
+  journal	= {Computational Brain \\& Behavior},
+  title		= {Reclaiming {AI} as a Theoretical Tool for Cognitive
+		  Science}
+}
+
+@Book{		  campbell2024indigenous,
+  author	= {Campbell, Lyle},
+  publisher	= {Oxford University PressNew York},
+  title		= {The Indigenous Languages of the Americas: History and
+		  Classification}
+}
+
 @Article{	  bale2024counting,
   author	= {Bale, Alan and Nicolas, David},
   journal	= {Linguistics and Philosophy},
