--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,10 @@
 
+@Article{	  abreuzavaleta2024negotiated,
+  author	= {Abreu Zavaleta, Mart{\'i}n},
+  journal	= {Linguistics and Philosophy},
+  title		= {Negotiated Contextualism and Disagreement Data}
+}
+
 @Article{	  toquero-perez2022revisiting,
   author	= {Toquero-P{\'e}rez, Luis Miguel},
   journal	= {Linguistic Variation},
