--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  armstrong2024roots,
+  author	= {Armstrong, Grant},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  number	= {6},
+  pages		= {1--33},
+  title		= {The Roots and Structures of Possessive Noun Classes},
+  volume	= {10}
+}
+
+@Article{	  adamson2024gender,
+  author	= {Adamson, Luke James},
+  journal	= {Language},
+  number	= {2},
+  pages		= {218--264},
+  title		= {Gender Assignment Is Local: On the Relation between
+		  Grammatical Gender and Inalienable Possession},
+  volume	= {100}
+}
+
 @Article{	  abreuzavaleta2024negotiated,
   author	= {Abreu Zavaleta, Mart{\'i}n},
   journal	= {Linguistics and Philosophy},
