--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,11 +1,34 @@
 
+@Article{	  fujikawa2024intentional,
+  author	= {Fujikawa, Naoya},
+  journal	= {Linguistics and Philosophy},
+  title		= {Intentional Identity, Mental Files, and Coordination: A
+		  {DRT} Account of Anaphora in Attitude Contexts},
+  year		= {2024}
+}
+
+@Article{	  francis2024even,
+  author	= {Francis, Naomi},
+  journal	= {Linguistics and Philosophy},
+  title		= {Even in Presupposition Denials},
+  year		= {2024}
+}
+
+@Article{	  schultheis2024might,
+  author	= {Schultheis, Ginger},
+  journal	= {Linguistics and Philosophy},
+  title		= {`Might' Counterfactuals},
+  year		= {2024}
+}
+
 @Article{	  armstrong2024roots,
   author	= {Armstrong, Grant},
   journal	= {Isogloss. Open Journal of Romance Linguistics},
   number	= {6},
   pages		= {1--33},
   title		= {The Roots and Structures of Possessive Noun Classes},
-  volume	= {10}
+  volume	= {10},
+  year		= {2024}
 }
 
 @Article{	  adamson2024gender,
@@ -15,13 +38,15 @@
   pages		= {218--264},
   title		= {Gender Assignment Is Local: On the Relation between
 		  Grammatical Gender and Inalienable Possession},
-  volume	= {100}
+  volume	= {100},
+  year		= {2024}
 }
 
 @Article{	  abreuzavaleta2024negotiated,
   author	= {Abreu Zavaleta, Mart{\'i}n},
   journal	= {Linguistics and Philosophy},
-  title		= {Negotiated Contextualism and Disagreement Data}
+  title		= {Negotiated Contextualism and Disagreement Data},
+  year		= {2024}
 }
 
 @Article{	  toquero-perez2022revisiting,
@@ -31,7 +56,8 @@
   pages		= {123--207},
   title		= {Revisiting Extraction and Subextraction Patterns from
 		  Arguments},
-  volume	= {22}
+  volume	= {22},
+  year		= {2024}
 }
 
 @Article{	  vanrooij2024reclaiming,
@@ -40,20 +66,23 @@
 		  Patricia},
   journal	= {Computational Brain \\& Behavior},
   title		= {Reclaiming {AI} as a Theoretical Tool for Cognitive
-		  Science}
+		  Science},
+  year		= {2024}
 }
 
 @Book{		  campbell2024indigenous,
   author	= {Campbell, Lyle},
   publisher	= {Oxford University PressNew York},
   title		= {The Indigenous Languages of the Americas: History and
-		  Classification}
+		  Classification},
+  year		= {2024}
 }
 
 @Article{	  bale2024counting,
   author	= {Bale, Alan and Nicolas, David},
   journal	= {Linguistics and Philosophy},
-  title		= {Counting Individuals and Their Halves}
+  title		= {Counting Individuals and Their Halves},
+  year		= {2024}
 }
 
 @InBook{	  arandagutierrez2008composicion,
