--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,88 @@
 
+@Article{	  larson2024vppreposing,
+  author	= {Larson, Richard K.},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {659--695},
+  title		= {{VP}-Preposing and Constituency Paradox},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  wilcox2024using,
+  author	= {Wilcox, Ethan Gotlieb and Futrell, Richard and Levy,
+		  Roger},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {805--848},
+  title		= {Using Computational Models to Test Syntactic
+		  Learnability},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  sheehan2024restrictions,
+  author	= {Sheehan, Michelle and Cyrino, Sonia},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {769--803},
+  title		= {Restrictions on Long Passives in English and Brazilian
+		  Portuguese: A Phase-Based Account},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  mackenzie2024restricted,
+  author	= {Mackenzie, Sara},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {697--723},
+  title		= {Restricted Structure Preservation in Stratal {OT}},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  poole2024more,
+  author	= {Poole, Ethan and Mendia, Jon Ander and Keine, Stefan},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {871--884},
+  title		= {More on (the Lack of) Reconstruction in English
+		  Tough-Constructions},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  thoms2024inverse,
+  author	= {Thoms, Gary},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {885--897},
+  title		= {Inverse Linking and Extraposition},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  ke2024can,
+  author	= {Ke, Alan Hezao},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {849--870},
+  title		= {Can Agree and Labeling Be Reduced to Minimal Search?},
+  volume	= {55},
+  year		= {2024}
+}
+
+@Article{	  nie2024applicative,
+  author	= {Nie, Yining},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {725--768},
+  title		= {Applicative Recursion and Nominal Licensing},
+  volume	= {55},
+  year		= {2024}
+}
+
 @Article{	  fujikawa2024intentional,
   author	= {Fujikawa, Naoya},
   journal	= {Linguistics and Philosophy},
