--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  marantz2001words,
+  author	= {Marantz, Alec},
+  title		= {Words},
+  year		= {2001}
+}
+
+@InBook{	  wood2017external,
+  author	= {Wood, Jim and Marantz, Alec},
+  booktitle	= {The Verbal Domain},
+  editor	= {D'Alessandro, Roberta and Franco, Irene and Gallego,
+		  {\'A}ngel J.},
+  pages		= {255-278},
+  publisher	= {Oxford University Press},
+  title		= {The interpretation of external arguments},
+  year		= {2017}
+}
+
+@InBook{	  harley2005verbs,
+  author	= {Harley, Heidi},
+  booktitle	= {The Syntax of Aspect: Deriving Thematic and Aspectual
+		  Interpretation},
+  editor	= {Erteschick-Shir, N. and Rappoport, TB},
+  pages		= {42-64},
+  publisher	= {Oxford University PressOxford},
+  title		= {How Do Verbs Get Their Names? Denominal verbs, Manner
+		  Incorporation, and the Ontology of Verb Roots in English},
+  year		= {2005}
+}
+
 @Article{	  larson2024vppreposing,
   author	= {Larson, Richard K.},
   journal	= {Linguistic Inquiry},
