--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  kaiser2023generality,
+  author	= {Kaiser, Elsi and Hsu, Haley},
+  journal	= {Semantics and Linguistic Theory},
+  pages		= {622--643},
+  title		= {Generality, Genericity and Subjective Predicates: What
+		  Propositional Attitude Verbs, Alien Viruses, and {COVID}
+		  Can Tell Us},
+  year		= {2023}
+}
+
+@Book{		  gisborne2010event,
+  author	= {Gisborne, Nikolas},
+  publisher	= {Oxford University Press},
+  title		= {The Event Structure of Perception Verbs},
+  year		= {2010}
+}
+
 @Article{	  marantz2001words,
   author	= {Marantz, Alec},
   title		= {Words},
