--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,59 @@
 
+@Article{	  axel-tober2024interpretive,
+  author	= {Axel-Tober, Katrin and Beck, Sigrid},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Interpretive Language Change under Constant Entailments:
+		  Stable Common Ground Updates as Catalysts for Lexical
+		  Change},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  mccarthy1986ocp,
+  author	= {McCarthy, John J.},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {207--263},
+  title		= {{OCP} Effects: Gemination and Antigemination},
+  volume	= {17},
+  year		= {1986}
+}
+
+@Book{		  collins2024principles,
+  address	= {Cambridge, Mass.},
+  author	= {Collins, Chris},
+  publisher	= {The MIT Press},
+  title		= {Principles of Argument Structure: A Merge-Based Approach},
+  year		= {2024}
+}
+
+@Book{		  bale2018phonology,
+  address	= {Cambridge, MA},
+  author	= {Bale, Alan and Reiss, Charles},
+  publisher	= {The MIT Press},
+  title		= {Phonology: A Formal Introduction},
+  year		= {2018}
+}
+
+@Article{	  snyder2013binding,
+  author	= {Snyder, Eric},
+  journal	= {Inquiry},
+  number	= {2-3},
+  pages		= {278--306},
+  title		= {Binding, Genericity, and Predicates of Personal Taste},
+  volume	= {56},
+  year		= {2013}
+}
+
+@Book{		  steedman2012taking,
+  address	= {Cambridge, Mass.},
+  author	= {Steedman, Mark},
+  publisher	= {The MIT Press},
+  title		= {Taking Scope: The Natural Semantics of Quantifiers},
+  year		= {2012}
+}
+
 @Article{	  kaiser2023generality,
   author	= {Kaiser, Elsi and Hsu, Haley},
   journal	= {Semantics and Linguistic Theory},
