--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  hinzen2024new,
+  author	= {Hinzen, Wolfram and Martin, Txuss and Wiltschko, Martina},
+  journal	= {Linguistics and Philosophy},
+  title		= {A New Argument for Linguistic Determinants of Human
+		  Thought},
+  year		= {2024}
+}
+
+@Book{		  koizumi2023constituent,
+  author	= {Koizumi, Masatoshi},
+  publisher	= {Cambridge University Press},
+  title		= {Constituent Order in Language and Thought: A Case Study in
+		  Field-Based Psycholinguistics},
+  year		= {2023}
+}
+
 @Article{	  axel-tober2024interpretive,
   author	= {Axel-Tober, Katrin and Beck, Sigrid},
   journal	= {Glossa: a journal of general linguistics},
