--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  mitchell2021why,
+  author	= {Mitchell, Melanie},
+  number	= {arXiv:2104.12871},
+  title		= {Why {AI} Is Harder Than We Think},
+  year		= {2021}
+}
+
+@Article{	  dentella2024testing,
+  author	= {Dentella, Vittoria and Guenther, Fritz and Murphy, Elliot
+		  and Marcus, Gary and Leivada, Evelina},
+  number	= {arXiv:2302.12313},
+  title		= {Testing {AI} on Language Comprehension Tasks Reveals
+		  Insensitivity to Underlying Meaning},
+  year		= {2024}
+}
+
 @Article{	  hinzen2024new,
   author	= {Hinzen, Wolfram and Martin, Txuss and Wiltschko, Martina},
   journal	= {Linguistics and Philosophy},
