--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  bade2024word,
+  author	= {Bade, Nadine and Schlenker, Philippe and Chemla,
+		  Emmanuel},
+  journal	= {Natural Language Semantics},
+  title		= {Word Learning Tasks as a Window into the Triggering
+		  Problem for Presuppositions},
+  year		= {2024}
+}
+
+@Article{	  collins2024simple,
+  author	= {Collins, Joe},
+  title		= {The Simple Reason {LLM}s Are Not Scientific Models (and
+		  What the Alternative Is for Linguistics).},
+  year		= {2024}
+}
+
 @Article{	  mitchell2021why,
   author	= {Mitchell, Melanie},
   number	= {arXiv:2104.12871},
