--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@Article{	  rodriguez2024short,
+  author	= {Rodr{\'i}guez Cort{\'e}s, {\'A}lvaro and Griffiths, James},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Short Sources, Islandhood, and Pronominal Correlates: New
+		  Experimental Support from German and Spanish for a Short
+		  Source Approach to Apparent Exceptions to the Clausemate
+		  Condition on Multiple Sluicing},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  chen2024decomposition,
+  author	= {Chen, Mingjiang},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {A Decomposition Analysis of Agents},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  vazquez2024firstphase,
+  author	= {G{\'o}mez V{\'a}zquez, Diana and Mateu, Jaume},
+  journal	= {Catalan Journal of Linguistics},
+  pages		= {135--161},
+  title		= {A First-Phase Syntax Approach to Grammaticalization:
+		  Evidence from the Spanish Pseudo-Copula ''Quedar(se)''},
+  volume	= {23},
+  year		= {2024}
+}
+
+@Article{	  vatrican2024intransitivity,
+  author	= {Vatrican, Axelle},
+  journal	= {Catalan Journal of Linguistics},
+  pages		= {73--104},
+  title		= {(In)Transitivity, Semantic Change, and Reanalysis: The
+		  Diachrony of the Spanish Verb ''Volver},
+  volume	= {23},
+  year		= {2024}
+}
+
 @Article{	  bade2024word,
   author	= {Bade, Nadine and Schlenker, Philippe and Chemla,
 		  Emmanuel},
