--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  roversi2024possession,
+  author	= {Roversi, Giovanni},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Possession and Syntactic Categories: An Argument from
+		  {\"A}iwoo},
+  year		= {2024}
+}
+
 @Article{	  rodriguez2024short,
   author	= {Rodr{\'i}guez Cort{\'e}s, {\'A}lvaro and Griffiths, James},
   journal	= {Glossa: a journal of general linguistics},
