--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@PhDThesis{	  bigolin2024syntax,
+  address	= {Barcelona},
+  author	= {Bigolin, Alessandro},
+  school	= {Universitat Aut{\`o}noma de Barcelona},
+  title		= {The Syntax of Argument Structure. Elements for a
+		  Configurational Theory},
+  year		= {2024}
+}
+
 @Article{	  roversi2024possession,
   author	= {Roversi, Giovanni},
   journal	= {Natural Language and Linguistic Theory},
