--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Article{	  delfitto2024copular,
+  author	= {Delfitto, Denis and Fiorin, Gaetano},
+  journal	= {Studia Linguistica},
+  number	= {n/a},
+  title		= {Copular Structures and Asymmetric Identity\dag},
+  volume	= {n/a},
+  year		= {2024}
+}
+
+@Article{	  driemel2024cagree,
+  author	= {Driemel, Imke and Kouneli, Maria},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {C-Agree Is Local Subject-Verb Agreement in Kipsigis},
+  year		= {2024}
+}
+
 @PhDThesis{	  bigolin2024syntax,
   address	= {Barcelona},
   author	= {Bigolin, Alessandro},
