--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  kaplan2024coordinated,
+  author	= {Kaplan, Aaron},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Coordinated and Local Optionality in Serial Noisy Harmonic
+		  Grammar},
+  year		= {2024}
+}
+
+@Article{	  flower2024spatiotemporal,
+  author	= {Flower, Nigel and Pylkk{\"a}nen, Liina},
+  journal	= {Journal of Neuroscience},
+  title		= {The Spatiotemporal Dynamics of Bottom-up and Top-down
+		  Processing during at-a-Glance Reading},
+  volume	= {Research Articles},
+  year		= {2024}
+}
+
+@InBook{	  sproat1991crosslinguistic,
+  address	= {Dordrecht},
+  author	= {Sproat, Richard and Shih, Chilin},
+  booktitle	= {Approaches to Language: Essays in Honor of S.-Y. Kuroda},
+  editor	= {Georgopoulos, Carol and Ishihara, Roberta},
+  pages		= {565-593},
+  publisher	= {Springer Netherlands},
+  title		= {The Cross-Linguistic Distribution of Adjective Ordering
+		  Restrictions Interdisciplinary},
+  year		= {1991}
+}
+
 @Article{	  delfitto2024copular,
   author	= {Delfitto, Denis and Fiorin, Gaetano},
   journal	= {Studia Linguistica},
