--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,40 @@
 
+@Book{		  butt2019new,
+  address	= {London ; New York},
+  author	= {Butt, John and Benjamin, Carmen and Moreira Rodr\'iguez,
+		  Antonia},
+  publisher	= {Routledge, Taylor \& Francis Group& Francis Group},
+  title		= {A New Reference Grammar of Modern Spanish},
+  year		= {2019}
+}
+
+@Book{		  biber2012longman,
+  address	= {Harlow},
+  author	= {Biber, Douglas and Johansson, Stig and Leech, Geoffrey and
+		  Conrad, Susan and Finnegan, Edward},
+  publisher	= {Longman},
+  title		= {Longman Grammar of Spoken and Written English},
+  year		= {2012}
+}
+
+@Book{		  stockwell1973grammatical,
+  address	= {Chicago},
+  author	= {Stockwell, Robert Paul and Bowen, Jean Donald and Martin,
+		  John Watson},
+  publisher	= {Univ. of Chicago Pr},
+  title		= {The grammatical structures of English and Spanish},
+  year		= {1973}
+}
+
+@PhDThesis{	  krauska2024world,
+  address	= {Maryland},
+  author	= {Krauska, Alexandra},
+  school	= {University of Maryland},
+  title		= {A World without Words: A Non-Lexicalist Framework for
+		  Psycho- and Neuro-Linguistics},
+  year		= {2024}
+}
+
 @Article{	  kaplan2024coordinated,
   author	= {Kaplan, Aaron},
   journal	= {Natural Language and Linguistic Theory},
