--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,35 @@
 
+@Article{	  carchidi2024creative,
+  author	= {Carchidi, Vincent J.},
+  journal	= {Biolinguistics},
+  pages		= {1--31},
+  title		= {Creative Minds Like Ours? Large Language Models and the
+		  Creative Aspect of Language Use},
+  volume	= {18},
+  year		= {2024}
+}
+
+@Article{	  sun2023syllables,
+  author	= {Sun, Yue and Poeppel, David},
+  journal	= {Proceedings of the National Academy of Sciences},
+  number	= {36},
+  pages		= {e2215710120},
+  title		= {Syllables and Their Beginnings Have a Special Role in the
+		  Mental Lexicon},
+  volume	= {120},
+  year		= {2023}
+}
+
+@Article{	  vanrooij2022psychological,
+  author	= {van Rooij, Iris},
+  journal	= {Nature Reviews Psychology},
+  number	= {3},
+  pages		= {127--128},
+  title		= {Psychological Models and Their Distractors},
+  volume	= {1},
+  year		= {2022}
+}
+
 @Book{		  butt2019new,
   address	= {London ; New York},
   author	= {Butt, John and Benjamin, Carmen and Moreira Rodr\'iguez,
