--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@PhDThesis{	  levi1975syntax,
+  author	= {Levi, Judith},
+  school	= {University of Chicago},
+  title		= {The Syntax and Semantics of Nonpredicating Adjectives in
+		  English},
+  year		= {1975}
+}
+
 @Article{	  carchidi2024creative,
   author	= {Carchidi, Vincent J.},
   journal	= {Biolinguistics},
