--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  angelopoulos2024nominalization,
+  author	= {Angelopoulos, Nikos},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Nominalization of Clauses: The Clausal Prolepsis
+		  Strategy},
+  year		= {2024}
+}
+
 @PhDThesis{	  levi1975syntax,
   author	= {Levi, Judith},
   school	= {University of Chicago},
