--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Article{	  mcnally2024two,
+  author	= {McNally, Louise},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Two Approaches to the Semantic Decomposition of Change of
+		  State Verbs, How They Differ, and Why It Matters},
+  volume	= {9},
+  year		= {2024}
+}
+
+@PhDThesis{	  martin1994syntactic,
+  address	= {Los Angeles},
+  author	= {Mart{\'i}n, Juan},
+  school	= {University of Southern California},
+  title		= {On the Syntactic Structure of Spanish Noun Phrases},
+  year		= {1994}
+}
+
+@PhDThesis{	  sanchezmasia2017adverbial,
+  address	= {Barcelona},
+  author	= {S{\'a}nchez Masi{\`a}, Melania},
+  school	= {Universitat Aut{\`o}noma de Barcelona},
+  title		= {Adverbial Adjectives and Nominal Scalirity},
+  year		= {2017}
+}
+
 @Article{	  angelopoulos2024nominalization,
   author	= {Angelopoulos, Nikos},
   journal	= {Natural Language and Linguistic Theory},
