--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@Article{	  gueron2020toughmovement,
+  author	= {Gu{\'e}ron, Jacqueline},
+  journal	= {Langages},
+  number	= {2},
+  pages		= {89--106},
+  title		= {Tough-movement as a modal structure: The example of
+		  English},
+  volume	= {218},
+  year		= {2020}
+}
+
+@Article{	  alexiadou2020comparative,
+  author	= {Alexiadou, Artemis and Anagnostopoulou, Elena},
+  journal	= {Langages},
+  number	= {2},
+  pages		= {17--38},
+  title		= {A Comparative Study of English and Greek Tough-Movement
+		  Constructions},
+  volume	= {218},
+  year		= {2020}
+}
+
+@Article{	  nanni1980surface,
+  author	= {Nanni, Deborah L.},
+  journal	= {Language},
+  number	= {3},
+  pages		= {568--581},
+  title		= {On the Surface Syntax of Constructions with Easy-Type
+		  Adjectives},
+  volume	= {56},
+  year		= {1980}
+}
+
+@Book{		  brown1991human,
+  address	= {New York},
+  author	= {Brown, Donald E.},
+  publisher	= {McGraw-Hill},
+  title		= {Human Universals},
+  year		= {1991}
+}
+
 @Article{	  mcnally2024two,
   author	= {McNally, Louise},
   journal	= {Glossa: a journal of general linguistics},
