--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@InBook{	  orlandi2024adjectives,
+  author	= {Orlandi, Adriana},
+  booktitle	= {Manual of Romance Word Classes},
+  editor	= {De Cesare, Anna-Maria and Salvi, Giampaolo},
+  pages		= {147-176},
+  publisher	= {De Gruyter},
+  title		= {Adjectives},
+  year		= {2024}
+}
+
 @Article{	  gueron2020toughmovement,
   author	= {Gu{\'e}ron, Jacqueline},
   journal	= {Langages},
