--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,22 @@
 
+@Article{	  bowers2024successes,
+  author	= {Bowers, Jeffrey S.},
+  title		= {The Successes and Failures of Artificial Neural Networks
+		  (ANNs) Highlight the Importance of Innate Linguistic Priors
+		  for Human Language Acquisition},
+  year		= {2024}
+}
+
+@Article{	  santorio2024confidence,
+  author	= {Santorio, Paolo and Cariani, Fabrizio and Wellwood,
+		  Alexis},
+  journal	= {Semantics and Pragmatics},
+  pages		= {14:EA--14:EA},
+  title		= {Confidence Reports},
+  volume	= {17},
+  year		= {2024}
+}
+
 @InBook{	  orlandi2024adjectives,
   author	= {Orlandi, Adriana},
   booktitle	= {Manual of Romance Word Classes},
