--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,45 @@
 
+@Book{		  schein2017conjunction,
+  address	= {Cambridge, Massachusetts},
+  author	= {Schein, Barry},
+  publisher	= {The MIT Press},
+  title		= {'And': Conjunction Reduction Redux},
+  year		= {2017}
+}
+
+@InBook{	  beghelli1997syntax,
+  address	= {Dordrecht},
+  author	= {Beghelli, Filippo},
+  booktitle	= {Ways of Scope Taking},
+  editor	= {Szabolcsi, Anna},
+  pages		= {349-408},
+  publisher	= {Springer Netherlands},
+  title		= {The Syntax of Distributivity and Pair-List Readings Ways
+		  of Scope Taking},
+  year		= {1997}
+}
+
+@InBook{	  beghelli1997distributivity,
+  address	= {Dordrecht},
+  author	= {Beghelli, Filippo and Stowell, Tim},
+  booktitle	= {Ways of Scope Taking},
+  editor	= {Szabolcsi, Anna},
+  pages		= {71-107},
+  publisher	= {Springer Netherlands},
+  title		= {Distributivity and Negation: The Syntax of Each and
+		  Every},
+  year		= {1997}
+}
+
+@Article{	  sanchezlopez1995distributive,
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  journal	= {Probus},
+  number	= {2},
+  title		= {On the Distributive Reading of Coordinate Phrases},
+  volume	= {7},
+  year		= {1995}
+}
+
 @Article{	  bowers2024successes,
   author	= {Bowers, Jeffrey S.},
   title		= {The Successes and Failures of Artificial Neural Networks
