--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Article{	  saab2010impossible,
+  author	= {Saab, Andr{\'e}s Leandro},
+  title		= {(Im)Possible Deletions in the Spanish DP},
+  year		= {2010}
+}
+
+@Article{	  fabregas2023ellipsis,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {1--134},
+  title		= {Ellipsis in Spanish},
+  volume	= {12},
+  year		= {2023}
+}
+
+@Article{	  fabregas2022genero,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Cuadernos de Investigaci{\'o}n Filol{\'o}gica},
+  pages		= {25--46},
+  title		= {El g{\'e}nero inclusivo: una mirada gramatical},
+  volume	= {51},
+  year		= {2022}
+}
+
 @Book{		  schein2017conjunction,
   address	= {Cambridge, Massachusetts},
   author	= {Schein, Barry},
