--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,64 @@
 
+@PhDThesis{	  downing1970syntactic,
+  author	= {Downing, Bruce},
+  school	= {University of Texas},
+  title		= {Syntactic Structure and Phonological Phrasing},
+  year		= {1970}
+}
+
+@Article{	  potsdam2022malagasy,
+  author	= {Potsdam, Eric},
+  journal	= {Natural Language and Linguistic Theory},
+  number	= {1},
+  pages		= {195--237},
+  title		= {Malagasy Extraposition},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Article{	  murphy2024discontinuous,
+  author	= {Murphy, Andrew and Wilson, Brianna},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Discontinuous Noun Phrases in Iquito},
+  year		= {2024}
+}
+
+@InBook{	  halle1993distributional,
+  author	= {Halle, Morris and Marantz, Alec},
+  booktitle	= {The view from building 20},
+  editor	= {Hale, Ken and Keyser, Samuel J.},
+  pages		= {111-176},
+  publisher	= {The MIT Press},
+  title		= {Distributed morphology and the pieces of inflection The
+		  view from building 20},
+  year		= {1993}
+}
+
+@InBook{	  sanchezlopez1999cuantificador,
+  address	= {Madrid},
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  organization	= {RAE},
+  pages		= {1025-1028},
+  publisher	= {RAE Espasa},
+  title		= {Los cuantificadores. Clases de cuantificadores y
+		  estructuras cuantificativas},
+  year		= {1999}
+}
+
+@InBook{	  leonetti1999articulo,
+  address	= {Madrid},
+  author	= {Leonetti, Manuel},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  organization	= {RAE},
+  pages		= {787-890},
+  publisher	= {RAE Espasa},
+  title		= {El art{\'i}culo},
+  year		= {1999}
+}
+
 @Article{	  saab2010impossible,
   author	= {Saab, Andr{\'e}s Leandro},
   title		= {(Im)Possible Deletions in the Spanish DP},
