--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  belletti1996parameters,
+  address	= {New York},
+  editor	= {Belletti, Adriana and Rizzi, Luigi},
+  publisher	= {Oxford University Press},
+  title		= {Parameters and Functional Heads: Essays in Comparative
+		  Syntax},
+  year		= {1996}
+}
+
 @PhDThesis{	  downing1970syntactic,
   author	= {Downing, Bruce},
   school	= {University of Texas},
