--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@Article{	  fabregas2024theories,
+  author	= {F{\'a}bregas, Antonio},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {2},
+  pages		= {1--126},
+  title		= {Theories of Argument Structure: The Connection between
+		  Lexical Information and Syntactic Structure},
+  volume	= {13},
+  year		= {2024}
+}
+
+@PhDThesis{	  fernandezserrano2022agreement,
+  address	= {Barcelona},
+  author	= {Fern{\'a}ndez Serrano, Irene},
+  school	= {Universitat Aut{\`o}noma de Barcelona},
+  title		= {Agreement and Optionality: Evidence from Spanish
+		  Variation},
+  year		= {2022}
+}
+
+@Book{		  costa2006studies,
+  address	= {Amsterdam/Philadelphia},
+  editor	= {Costa, Jo{\~a}o and Figueiredo Silva, Maria Cristina},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Studies on Agreement},
+  year		= {2006}
+}
+
+@InBook{	  mensching2006lack,
+  author	= {Mensching, Guido and Remberger, Eva-Maria},
+  booktitle	= {Studies on Agreement},
+  editor	= {Costa, Jo{\~a}o and Figueiredo Silva, Maria Cristina},
+  pages		= {173-201},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Lack of Agreement in Romance: Probes},
+  year		= {2006}
+}
+
 @Book{		  belletti1996parameters,
   address	= {New York},
   editor	= {Belletti, Adriana and Rizzi, Luigi},
