--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,48 @@
 
+@Article{	  collins2024how,
+  author	= {Collins, John},
+  journal	= {Erkenntnis},
+  title		= {How to Be an Atomist Without Being an Externalist},
+  year		= {2024}
+}
+
+@Article{	  collins2023copredication,
+  author	= {Collins, John},
+  journal	= {Journal of Semantics},
+  number	= {2-3},
+  pages		= {359--389},
+  title		= {Copredication as Illusion},
+  volume	= {40},
+  year		= {2023}
+}
+
+@Article{	  liebesman2017copredication,
+  author	= {Liebesman, David and Magidor, Ofra},
+  journal	= {Philosophical Issues},
+  number	= {1},
+  pages		= {131--166},
+  title		= {Copredication and Property Inheritance},
+  volume	= {27},
+  year		= {2017}
+}
+
+@Article{	  apresjan1974regular,
+  author	= {Apresjan, Ju. D.},
+  journal	= {Linguistics},
+  number	= {142},
+  title		= {Regular Polysemy},
+  volume	= {12},
+  year		= {1974}
+}
+
+@Book{		  cath2024knowing,
+  address	= {Cambridge},
+  author	= {Cath, Yuri},
+  publisher	= {Cambridge University Press},
+  title		= {Knowing What It Is Like},
+  year		= {2024}
+}
+
 @Article{	  fabregas2024theories,
   author	= {F{\'a}bregas, Antonio},
   journal	= {Borealis -- An International Journal of Hispanic
