--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,12 @@
 
+@Article{	  aissen2024possessor,
+  author	= {Aissen, Judith and Polian, Gilles},
+  journal	= {Natural Language \\& Linguistic Theory},
+  title		= {Possessor Extraction and Categorical Subject in
+		  Tseltalan},
+  year		= {2024}
+}
+
 @Article{	  collins2024how,
   author	= {Collins, John},
   journal	= {Erkenntnis},
