--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  ginsburg2024constraining,
+  author	= {Ginsburg, Jason},
+  journal	= {Biolinguistics},
+  pages		= {1--60},
+  title		= {Constraining Free Merge},
+  volume	= {18},
+  year		= {2024}
+}
+
 @Article{	  aissen2024possessor,
   author	= {Aissen, Judith and Polian, Gilles},
   journal	= {Natural Language \\& Linguistic Theory},
