--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,85 @@
 
+@Article{	  collins2023theory,
+  author	= {Collins, Chris and Kayne, Richard S.},
+  journal	= {Studies in Chinese Linguistics},
+  number	= {1},
+  pages		= {1--32},
+  title		= {Towards a Theory of Morphology as Syntax},
+  volume	= {44},
+  year		= {2023}
+}
+
+@Article{	  miller2024verb,
+  author	= {Miller, Philip and Hemforth, Barbara},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Verb Phrase Ellipsis with Nominal Antecedents: The Case of
+		  Polar Nouns},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  kiss2024evolution,
+  author	= {Kiss, Katalin {\"E}},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {The Evolution of Finite Temporal Subordination. From
+		  Parataxis via Correlatives to Temporal and Event Relatives
+		  in Hungarian},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Book{		  madden2024personal,
+  author	= {Madden, Rory},
+  publisher	= {Cambridge University Press},
+  title		= {Personal Identity and the Self},
+  year		= {2024}
+}
+
+@Article{	  gunes2024acoustic,
+  author	= {G{\"u}ne{\c s}, G{\"u}liz and Deh{\'e}, Nicole},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Acoustic correlates of {GIVEN}ness in Icelandic:
+		  Revisiting the Radical Deaccentuation hypothesis},
+  volume	= {9},
+  year		= {2024}
+}
+
+@Article{	  baker2013agreementa,
+  author	= {Baker, Mark C.},
+  journal	= {Lingua SI: Syntax and Cognition: Core Ideas and Results in
+		  Syntax},
+  pages		= {14--32},
+  title		= {On Agreement and Its Relationship to Case: Some Generative
+		  Ideas and Results},
+  volume	= {130},
+  year		= {2013}
+}
+
+@Article{	  rizzi2013introductiona,
+  author	= {Rizzi, Luigi},
+  journal	= {Lingua SI: Syntax and Cognition: Core Ideas and Results in
+		  Syntax},
+  pages		= {1--13},
+  title		= {Introduction: Core Computational Principles in Natural
+		  Language Syntax},
+  volume	= {130},
+  year		= {2013}
+}
+
+@Article{	  cinque2013cognitiona,
+  author	= {Cinque, Guglielmo},
+  journal	= {Lingua SI: Syntax and Cognition: Core Ideas and Results in
+		  Syntax},
+  pages		= {50--65},
+  title		= {Cognition, Universal Grammar, and Typological
+		  Generalizations},
+  volume	= {130},
+  year		= {2013}
+}
+
 @Article{	  ginsburg2024constraining,
   author	= {Ginsburg, Jason},
   journal	= {Biolinguistics},
