--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  emonds1987invisible,
+  author	= {Emonds, Joseph},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {613--632},
+  title		= {The Invisible Category Principle},
+  volume	= {18},
+  year		= {1987}
+}
+
 @Article{	  collins2023theory,
   author	= {Collins, Chris and Kayne, Richard S.},
   journal	= {Studies in Chinese Linguistics},
