--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@Book{		  jonas2012grammatical,
+  address	= {Oxford ; New York},
+  editor	= {Jonas, Dianne and Whitman, John and Garrett, Andrew},
+  publisher	= {Oxford University Press},
+  title		= {Grammatical Change: Origins, Nature, Outcomes},
+  year		= {2012}
+}
+
+@InBook{	  batllori2012grammaticalization,
+  address	= {Oxford ; New York},
+  author	= {Batllori, Montserrat and Roca, Francesc},
+  booktitle	= {Grammatical Change: Origins, Nature, Outcomes},
+  editor	= {Jonas, Dianne and Whitman, John and Garrett, Andrew},
+  pages		= {73-92},
+  publisher	= {Oxford University Press},
+  title		= {Grammaticalization of Ser and Estar in Romance},
+  year		= {2012}
+}
+
+@Book{		  ramchand2008verb,
+  address	= {Cambridge},
+  author	= {Ramchand, Gillian},
+  publisher	= {Cambridge University Press},
+  title		= {Verb Meaning and the Lexicon: A First-Phase Syntax},
+  volume	= {(116)},
+  year		= {2008}
+}
+
 @Article{	  emonds1987invisible,
   author	= {Emonds, Joseph},
   journal	= {Linguistic Inquiry},
