--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Article{	  fabregas2020internal,
+  author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael},
+  journal	= {Studies in Hispanic and Lusophone Linguistics},
+  number	= {2},
+  pages		= {331--360},
+  title		= {The Internal Structure of Perfective Adjectives: States
+		  and Blocking},
+  volume	= {13},
+  year		= {2020}
+}
+
+@Article{	  falk1979vision,
+  author	= {Falk, Johan},
+  journal	= {Studia Neophilologica},
+  number	= {2},
+  pages		= {275--293},
+  title		= {Visi{\'o}n de norma general versus visi{\'o}n de norma
+		  individual: ensayo de explicaci{\'o}n de la oposici{\'o}n
+		  ser/estar en uni{\'o}n con adjetivos que denotan belleza y
+		  corpulencia},
+  volume	= {51},
+  year		= {1979}
+}
+
 @Book{		  jonas2012grammatical,
   address	= {Oxford ; New York},
   editor	= {Jonas, Dianne and Whitman, John and Garrett, Andrew},
