--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,20 @@
 
+@Book{		  liefke2024natural,
+  address	= {Cambridge ; New York},
+  author	= {Liefke, Kristina},
+  publisher	= {Cambridge University Press},
+  title		= {Natural Language Ontology and Semantic Theory},
+  year		= {2024}
+}
+
+@Book{		  abzianidze2024semantics,
+  address	= {Cambridge},
+  author	= {Abzianidze, Lasha and Bylinina, Lisa and Paperno, Denis},
+  publisher	= {Cambridge University Press},
+  title		= {Semantics and Deep Learning},
+  year		= {2024}
+}
+
 @Article{	  fabregas2020internal,
   author	= {F{\'a}bregas, Antonio and Mar{\'i}n, Rafael},
   journal	= {Studies in Hispanic and Lusophone Linguistics},
