--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,32 @@
 
+@Article{	  gumiel-molina2024variacion,
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {2},
+  pages		= {63--110},
+  title		= {Variaci{\'o}n sint{\'a}ctica en espa{\~n}ol con verbos no
+		  predicativos desde una perspectiva microparam{\'e}trica:
+		  construcciones existenciales, copulativas y semicopulativas},
+  volume	= {54},
+  year		= {2024}
+}
+
+@Article{	  hoot2024syntactic,
+  author	= {Hoot, Bradley and Ebert, Shane},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Syntactic Island Effects in Spanish: Experimental
+		  Evidence},
+  year		= {2024}
+}
+
+@Article{	  sag2024nonoptionality,
+  author	= {Sa{\u g}, Ya{\u g}mur},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {On the (Non)Optionality of the Turkish Classifier Tane},
+  year		= {2024}
+}
+
 @Book{		  liefke2024natural,
   address	= {Cambridge ; New York},
   author	= {Liefke, Kristina},
